[tool.poetry]
name = "llmvm"
version = "0.1.0"
description = "CLI productivity tool for Large Language Models"
authors = ["Sonny Bonds <contact@9600dev.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
async-timeout = "^4.0.3"
click = "^8.1.7"
httpx = "^0.26.0"
jsonpickle = "^3.0.2"
pyperclip = "^1.8.2"
requests = "^2.31.0"
rich = "^13.7.0"
anthropic = "^0.8.1"
click-default-group = "^1.2.4"
pillow = "^10.2.0"
pandas = "^2.1.4"
fastapi = "^0.108.0"
docstring-parser = "^0.15"
scikit-learn = "^1.3.2"
pdf2image = "^1.16.3"
pytesseract = "^0.3.10"
pdfminer-six = "^20231228"
pypdf = "^3.17.4"
tiktoken = "^0.5.2"
openai = "^1.6.1"
uvicorn = "^0.25.0"
aiofiles = "^23.2.1"
playwright = "^1.40.0"
selenium = "^4.16.0"
yfinance = "^0.2.33"
dill = "^0.3.7"
astunparse = "^1.6.3"
sec-api = "^1.0.17"
nltk = "^3.8.1"
markdownify = "^0.11.6"
newspaper3k = "^0.2.8"
googlesearch-python = "^1.2.3"
google-search-results = "^2.4.2"
langchain = "^0.0.353"
python-multipart = "^0.0.6"
torch = {version = "^2.1.2", source = "pytorch"}
sentence-transformers = "^2.2.2"
faiss-cpu = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"
